Verschiedene Änderungen